--fixed horizontal scroll bug

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     align-content: center;
-    width: 100%;
+    width:
 }
 
 .dual-bg {
@@ -97,4 +97,5 @@ body {
     background-position: center;
     background-size: cover;
     border-radius: 10px;
+    width: 100%;
 }
